--- a/index.html
+++ b/index.html
@@ -103,9 +103,13 @@
       <div class="mdl-layout__header-row">
         <span class="mdl-layout-title">HMLR Transaction</span>
         <div class="mdl-layout-spacer"></div>
-          <i class="material-icons home-icon">home</i>
+          <!-- <i class="material-icons home-icon">home</i>
           <a href="/" style="text-decoration:none; color:white;">
           <span class="mdl-layout-title">SELLER</span>
+        </a>&nbsp;&nbsp; -->
+        <i class="material-icons home-icon">home</i>
+        <a href="http://localhost:4202/#/Landing" style="text-decoration:none; color:white;">
+          <span class="mdl-layout-title">HOME</span>
         </a>
       </div>
     </header>
