--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <span class="mdl-layout-title">SELLER</span>
         </a>&nbsp;&nbsp; -->
         <i class="material-icons home-icon">home</i>
-        <a href="http://localhost:4202/#/Landing" style="text-decoration:none; color:white;">
+        <a href="https://hmlr-ds-landingscreen.eu-gb.mybluemix.net/#/Landing" style="text-decoration:none; color:white;">
           <span class="mdl-layout-title">HOME</span>
         </a>
       </div>
