--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 </head>
 
 <body>
-  <div class="demo-layout mdl-layout mdl-layout--fixed-header mdl-js-layout mdl-color--grey-100">
-    <header class="demo-header mdl-layout__header mdl-layout__header--scroll mdl-color-text--grey-800">
+  <div class="demo-layout mdl-layout mdl-layout--fixed-header mdl-js-layout" style="background-color: #0c1e3b; padding-bottom: 200px;">
+    <header class="demo-header mdl-layout__header mdl-layout__header--scroll">
       <div class="mdl-layout__header-row">
         <span class="mdl-layout-title">HMLR Transaction</span>
         <div class="mdl-layout-spacer"></div>
@@ -114,10 +114,10 @@
       </div>
     </header>
     <!-- <div class="demo-ribbon"></div> -->
-    <main class="demo-main mdl-layout__content">
+    <main class="demo-main mdl-layout__content" style="background-color: #0c1e3b;">
       <div class="demo-container mdl-grid">
         <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-        <div class="demo-content content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+        <div class="demo-content content mdl-cell mdl-cell--8-col">
           <div id="app"></div>
         </div>
       </div>
