Stop fingerprint from saying 'signing' on second click. Change home link. Add underline to home link

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.5/leaflet.css" />
   <style>
 
+    a:hover {
+      text-decoration: underline;
+    }
+
     .blue {
       background-color: #488aff !important;
       color: #fff !important;
